v5: IVF coarse k-means partitioning — first positive Docker score (+2600.82)
Replaces brute-force k-NN with Inverted File Index (IVF):
  1. Build time: cluster the 3M reference vectors into K=256 buckets via
     k-means (k-means++ init + Lloyd's iteration with FloatVector+FMA in
     the assignment step). Reorder vectors and labels so each cluster is
     contiguous in vectors-i8.bin.
  2. Query time: compute float distance to all K centroids, pick the
     NPROBE=3 nearest, scan only those buckets with v4's hybrid B->F SIMD,
     maintain a global top-5 max-heap.

Inner-loop work drops from 3M*14 = 42M ops to 256*14 + 3*~12k*14 ~= 510k
ops per request — about 80x fewer comparisons.

New code:
- KMeans.java: standalone Lloyd's clusterer with k-means++ init. SIMD
  (FloatVector+FMA) inside the assignment step. Logs per-iter changes.
  Empty clusters reseed with a random vector.
- DatasetBuilder: after int8 quantization runs k-means, reorders vectors
  and labels by cluster, writes centroids.bin (K*DIMS float32 LE) and
  cluster_offsets.bin (K+1 int32 LE).
- Dataset: loads 5 files now. Exposes centroids(), clusterStart(c),
  clusterEnd(c), and a 6-arg fromArrays() factory for tests.
- KnnSearcher: full IVF rewrite. Pre-loads query as FloatVector for the
  centroid scan and as byte->float for the bucket scan. NPROBE clamped to
  min(NPROBE, k) so single-cluster tests work.
- KnnSearcherIvfRecallTest: synthetic recall test (K=16, 200 queries),
  asserts >=80% fraud_score agreement with brute-force ground truth.
- KnnSearcherInt8ParityTest: updated to provide trivial single-cluster
  partition (still validates int8 quantization correctness via IVF API).

Build time: +60-90s for k-means (110s total now). One-time.

Cluster diagnostics (real dataset):
  K=256, mean=11718, min=554, max=37662, empty=0
  k-means ran 20 iterations, ended at 0.6% reassignments (stable).

Results:

  HOST (no limits):
    v4 hybrid: 14307 served,  p99=2002ms, fail=56.86%, score=-6000
    v5 IVF